add base lib gatling